--- a/index.html
+++ b/index.html
@@ -3,47 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./style/style.css">
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
+  <main class="container">
+    <header class="card-header">
+      <h1>Join our community</h1>
+      <h2>30-day, hassle-free money back guarantee</h2>
+      <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+    </header>
+    <section class="card-prices">
+      <h2>Monthly Subscription</h2>
+      <div class="price-tag">
+        <strong>&dollar;29</strong> <span>per month</span>
+      </div>
+      <p>Full access for less than &dollar;1 a day</p>
+      <button class="btn">Sign Up</button>
+    </section>
+    <section class="card-benefits">
+      <h2>Why Us</h2>
+      <ul class="benefits">
+        <li class="benefits-item">Tutorials by industry experts</li>
+        <li class="benefits-item">Peer &amp; expert code review</li>
+        <li class="benefits-item">Coding exercises</li>
+        <li class="benefits-item">Access to our GitHub repos</li>
+        <li class="benefits-item">Community forum</li>
+        <li class="benefits-item">Flashcard decks</li>
+        <li class="benefits-item">New videos every week</li>
+      </ul>
+    </section>
+  </main>
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/jullierme-r" target="_blank">Jullierme R Gomes</a>.
     </p>
   </footer>
 </body>
